Added button for readthedocs.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Game of Fifteen
+Game of Fifteen [![Documentation Status](https://readthedocs.org/projects/scala-game15/badge/?version=latest)](https://readthedocs.org/projects/scala-game15/?badge=latest)
 ===============
 
 For an explanation of the problem, see: http://en.wikipedia.org/wiki/15_puzzle
